--- a/frontend.ipynb
+++ b/frontend.ipynb
@@ -4,29 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Puzzle\n",
-      "\n",
-      "One of these books is The rise of ethnic politics in Nepal : democracy in the\n",
-      "margins but you can only see the the Library of Congress call numbers. For more\n",
-      "information about these look at this website:\n",
-      "https://www.loc.gov/catdir/cpso/lcco/\n",
-      "[1] HQ784.C55 A45 2010\n",
-      "[2] PS3566.Y55Z6956 2013\n",
-      "[3] GN635.N425H365 2010\n",
-      "[4] LA227.4.B665 2013\n",
-      "[5] ML410.S932G73 2013\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import main\n",
     "main.go()"
